--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     </style>
     <!-- <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script> -->
 
-    <title>Join Disney+</title>
+    <title>Join VarietySplash</title>
   </head>
   <body style="background-color: #a29ffb33;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
