--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   </head>
   <body style="background-color: #a29ffb33;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="display: flex;flex-direction: column;"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
